--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=forohub
+spring.datasource.url=jdbc:mysql://${DB_HOST}:3310/forohub
+spring.datasource.username=root
+spring.datasource.password=${DB_PASSWORD}
+spring.jpa.show-sql=true
