--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.url=jdbc:mysql://${DB_HOST}:3310/forohub
 spring.datasource.username=root
 spring.datasource.password=${DB_PASSWORD}
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
